<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.screen.SignUpFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="282dp"
                android:layout_height="36dp"
                android:layout_marginStart="23dp"
                android:layout_marginTop="110dp"
                android:text="@string/signup"
                android:textColor="#36455A"
                android:textSize="30dp"
                android:textStyle="bold"
                app:lineHeight="36dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginStart="23dp"
                android:layout_marginTop="10dp"
                android:text="@string/register_new_account"
                android:textColor="#495566"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="23dp"
                android:layout_marginTop="25dp"
                android:text="@string/username"
                android:textColor="#6A6F7D"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="23dp"
                android:layout_marginRight="23dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textPersonName"
                android:textColor="#36455A"
                android:textSize="17sp"
                tools:layout_marginTop="10dp"
                tools:ignore="TextFields" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="23dp"
                android:layout_marginTop="25dp"
                android:text="@string/password"
                android:textColor="#6A6F7D"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/edtPass"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="23dp"
                android:layout_marginRight="23dp"
                android:ems="10"
                android:hint="@string/password1"
                android:inputType="textPassword"
                android:textColor="#36455A"
                android:textSize="17sp"
                tools:layout_marginTop="10dp"
                android:autofillHints="" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="23dp"
                android:layout_marginTop="25dp"
                android:text="Fullname"
                android:textColor="#6A6F7D"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/edtFullName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="23dp"
                android:layout_marginRight="23dp"
                android:ems="10"
                android:hint="@string/nguyen_a"
                android:inputType="textPersonName"
                android:textColor="#36455A"
                android:textSize="17sp"
                tools:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="23dp"
                android:layout_marginTop="25dp"
                android:text="@string/phone"
                android:textColor="#6A6F7D"
                android:textSize="12sp" />
            <EditText
                android:id="@+id/edtPhone"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="23dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="23dp"
                android:textColor="#36455A"
                android:hint="+84"
                android:textSize="17sp"
                android:ems="10"
                android:inputType="phone"
                tools:ignore="Autofill"/>
            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="23dp"
                android:layout_marginTop="25dp"
                android:text="@string/address"
                android:textColor="#6A6F7D"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/edtAddress"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="23dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="23dp"
                android:ems="10"
                android:hint="@string/quan_2_tp_hcm"
                android:inputType="textPostalAddress"
                android:textColor="#36455A"
                android:textSize="17sp"
                tools:ignore="Autofill" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/bgr_btnscreen1"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>