<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/draw_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:openDrawer="end"
        tools:context=".view.screen.ProfileFragment">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_gravity="end"
        app:headerLayout="@layout/header_layout"
        app:menu="@menu/profile_menu"
        android:fitsSystemWindows="true"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
    </com.google.android.material.navigation.NavigationView>

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/button_nav"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:contentDescription="btnNaviga"
                        app:icon="@drawable/dots"
                        app:iconSize="30dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView21"
                        android:layout_width="411dp"
                        android:layout_height="295dp"
                        android:background="@drawable/gradient_fill"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/btn_back2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:contentDescription="@string/image"
                        app:icon="@drawable/btn_back"
                        app:iconSize="30dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />



                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/imageAvatar"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="55dp"
                        android:src="@drawable/avatar"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.498"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="MissingConstraints"/>

                    <TextView
                        android:id="@+id/textfullName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="Full Name"
                        android:textColor="#FFFFFF"
                        android:textSize="29sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageAvatar" />

                    <TextView
                        android:id="@+id/textAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:drawableStart="@drawable/baseline_location_on_24"
                        android:text="42/24 Ung Van Khiem"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.498"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textfullName" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:id="@id/topBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:baselineAligned="false"
                    android:elevation="10dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingStart="20dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="10dp"
                    android:weightSum="3">

                    <LinearLayout
                        android:id="@+id/layoutArt"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        tools:ignore="InefficientWeight">

                        <ImageView
                            android:id="@+id/imageArt"
                            android:layout_width="40dp"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/todo2"
                            android:src="@drawable/baseline_article_24" />

                        <TextView
                            android:id="@+id/textArticles"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/articles1"
                            android:textColor="#FFFFFF"
                            android:textStyle="bold"
                            android:visibility="gone"
                            tools:ignore="HardcodedText" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layoutSpec"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        tools:ignore="InefficientWeight">

                        <ImageView
                            android:id="@+id/imageSpecies"
                            android:layout_width="40dp"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/todo1"
                            android:src="@drawable/baseline_grass_24" />

                        <TextView
                            android:id="@+id/textSpecies"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/species1"
                            android:textColor="#FFFFFF"
                            android:textStyle="bold"
                            android:visibility="gone" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layoutLikes"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        tools:ignore="InefficientWeight">

                        <ImageView
                            android:id="@+id/imageLike"
                            android:layout_width="40dp"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/like"
                            android:src="@drawable/baseline_favorite_24" />

                        <TextView
                            android:id="@+id/textLike"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="13dp"
                            android:text="@string/likes"
                            android:textColor="#FFFFFF"
                            android:textStyle="bold"
                            android:visibility="gone" />
                    </LinearLayout>
                </LinearLayout>
                    <androidx.fragment.app.FragmentContainerView
                        android:id="@+id/fragmentContainerView"
                        android:name="com.example.searchplant.view.screen.ArticlesProfileFragment"
                        android:layout_width="match_parent"
                        android:layout_height="700dp"
                        android:layout_above="@+id/topBar"
                        tools:ignore="ObsoleteLayoutParam"
                        tools:layout="@layout/fragment_articles_profile"/>

            </LinearLayout>
        </ScrollView>


        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/coordinatorLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="ExtraText">

            <com.google.android.material.bottomappbar.BottomAppBar
                android:id="@+id/bottomAppBar4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/white"
                app:fabCradleMargin="8dp"
                app:fabCradleRoundedCornerRadius="50dp"
                app:fabCradleVerticalOffset="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="BottomAppBar,MissingConstraints">

                <com.google.android.material.bottomnavigation.BottomNavigationView
                    android:id="@+id/bottomNavigationView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:background="@android:color/transparent"
                    android:backgroundTint="@color/white"
                    app:itemIconTint="@color/background_btn"
                    app:itemTextColor="@color/background_btn"
                    app:labelVisibilityMode="labeled"
                    app:menu="@menu/bottom_navigation_menu" />
            </com.google.android.material.bottomappbar.BottomAppBar>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#48A2F5"
                android:clickable="true"
                android:contentDescription="@string/todo"
                android:focusable="true"
                android:src="@drawable/baseline_add_24"
                app:layout_anchor="@id/bottomAppBar4"
                app:maxImageSize="40dp"
                app:rippleColor="@color/white" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </androidx.drawerlayout.widget.DrawerLayout>
</layout>